added cat image by id

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,41 +1,55 @@
+.container {
+  padding-top: 2rem;
 
-/***
- 🟣 SmolCSS Snippet Styles
- */
+  h1 {
+    text-align: center;
+  }
+}
+
 .smol-flexbox-grid {
   --min: 15ch;
-  --gap: 1rem;
+  --gap: 2rem;
 
   display: flex;
   flex-wrap: wrap;
   gap: var(--gap);
 }
 
-.smol-flexbox-grid > * {
+.smol-flexbox-grid>* {
   flex: 1 1 var(--min);
 }
 
 .smol-aspect-ratio-gallery {
   --min: 15rem;
   --aspect-ratio: 4/3;
-  padding-inline: 2rem;
-}
 
-.smol-aspect-ratio-gallery li {
-  height: max(25vh, 15rem);
-  list-style: none;
-}
+  Link {
+    height: max(25vh, 15rem);
+  }
 
-@supports (aspect-ratio: 1) {
-  .smol-aspect-ratio-gallery li {
-    aspect-ratio: var(--aspect-ratio);
-    height: auto;
+  img {
+    display: block;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    transition: 0.8s;
+    -webkit-transition: 0.8s;
+    -moz-transition: 0.8s;
+    -o-transition: 0.8s;
+    -ms-transition: 0.8s;
+
+    &:hover {
+      cursor: pointer;
+      transform: scale(1.1);
+    }
   }
 }
 
-.smol-aspect-ratio-gallery img {
-  display: block;
-  object-fit: cover;
-  width: 100%;
-  height: 100%;
+@supports (aspect-ratio: 1) {
+  .smol-aspect-ratio-gallery {
+    Link {
+      aspect-ratio: var(--aspect-ratio);
+      height: auto;
+    }
+  }
 }
